--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <h1>Hello, I am Ritmic!</h1>
         <p>This is my first GitHub web page project.</p>
         <p>Check my <a href="https://github.com/ritmicofficial">GitHub profile</a>.</p>
+        <img src="https://github.com/ritmic.png" alt="My Avatar" width="150">
     </div>
 </body>
 </html>
