--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <body>
     <div class="container">
         <!-- Logo -->
-        <img src="ritmic-logo.png" alt="Ritmic Logo" class="logo">
+        <img src="ritmic.png" alt="Ritmic Logo" class="logo">
 
         <!-- Başlık ve açıklama -->
         <h1>Hello, I am Ritmic!</h1>
