--- a/index.html
+++ b/index.html
@@ -2,59 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ritmic Web Page</title>
     <style>
-        body {
-            background-color: #1e1e2f;
-            color: #ffffff;
-            font-family: 'Arial', sans-serif;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            margin: 0;
-        }
-
-        .container {
-            background-color: #2e2e3f;
-            padding: 30px;
-            border-radius: 15px;
-            text-align: center;
-        }
-
-        .logo {
-            width: 150px;
-            margin-bottom: 20px;
-        }
-
-        h1 {
-            color: #00bfff;
-            margin-bottom: 10px;
-        }
-
-        p {
-            font-size: 18px;
-            margin-bottom: 10px;
-        }
-
-        a {
-            color: #ff7f50;
-            text-decoration: none;
-        }
-
-        a:hover {
-            text-decoration: underline;
-        }
+        body { background-color: #1e1e2f; color: #fff; text-align: center; font-family: Arial, sans-serif; padding: 50px; }
+        .container { background-color: #2e2e3f; padding: 30px; border-radius: 15px; display: inline-block; }
+        .logo { width: 150px; margin-bottom: 20px; }
+        h1 { color: #00bfff; }
+        a { color: #ff7f50; text-decoration: none; }
+        a:hover { text-decoration: underline; }
     </style>
 </head>
 <body>
     <div class="container">
-        <!-- Logo -->
         <img src="ritmic.png" alt="Ritmic Logo" class="logo">
-
-        <!-- Başlık ve açıklama -->
         <h1>Hello, I am Ritmic!</h1>
         <p>Welcome to my first GitHub web page project.</p>
         <p>Check my <a href="https://github.com/ritmicofficial">GitHub profile</a>.</p>
