--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
   <!-- Navbar -->
   <header>
     <nav>
-      <div class="logo">Ritmic</div>
+      <div class="logo">
+        <img src="ritmic.png" alt="Logo" />
+        Ritmic
+      </div>
       <ul class="nav-links">
         <li><a href="#home">Home</a></li>
         <li><a href="#about">About</a></li>
@@ -25,38 +28,4 @@
     <p>A beginner learning software development and building projects.</p>
   </section>
 
-  <!-- About -->
-  <section id="about" class="section">
-    <h2>About Me</h2>
-    <p>
-      I'm currently learning programming.  
-      This website is one of my first steps into the world of software development 🚀.
-    </p>
-  </section>
-
-  <!-- Projects -->
-  <section id="projects" class="section">
-    <h2>Projects</h2>
-    <div class="projects">
-      <!-- Project 1 -->
-      <div class="card">
-        <h3>Calculator</h3>
-        <p>A simple Python calculator project I made while learning coding.</p>
-        <a href="https://github.com/ritmicofficial/calculator" target="_blank">View on GitHub</a>
-      </div>
-
-      <!-- Project 2 -->
-      <div class="card">
-        <h3>First Website</h3>
-        <p>My personal website built with HTML and CSS (this site!).</p>
-        <a href="https://ritmicofficial.github.io/website" target="_blank">Live Website</a>
-      </div>
-    </div>
-  </section>
-  
-  <!-- Footer -->
-  <footer>
-    <p>© 2025 Ritmic</p>
-  </footer>
-</body>
-</html>
+  <
