--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         Ritmic
       </div>
       <ul class="nav-links">
-        <li><a href="#home">Home</a></li>
+        <li><a href="#home">Homee</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="#projects">Projects</a></li>
       </ul>
