--- a/index.html
+++ b/index.html
@@ -62,11 +62,22 @@
     <p>© 2025 Ritmic</p>
   </footer>
 
-  <!-- Dark/Light Mode Script -->
+  <!-- Scripts -->
   <script>
+    // Dark/Light mode toggle
     const toggle = document.getElementById('theme-toggle');
     toggle.addEventListener('click', () => {
       document.body.classList.toggle('dark-mode');
+    });
+
+    // Smooth scroll
+    document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+      anchor.addEventListener('click', function(e) {
+        e.preventDefault();
+        document.querySelector(this.getAttribute('href')).scrollIntoView({
+          behavior: 'smooth'
+        });
+      });
     });
   </script>
 </body>
