--- a/index.html
+++ b/index.html
@@ -19,7 +19,12 @@
         <li><a href="#about">About</a></li>
         <li><a href="#projects">Projects</a></li>
       </ul>
-      <button id="theme-toggle">Toggle Dark/Light</button>
+      <div class="theme-switch-wrapper">
+        <label class="theme-switch" for="theme-toggle">
+          <input type="checkbox" id="theme-toggle">
+          <span class="slider round"></span>
+        </label>
+      </div>
     </nav>
   </header>
 
@@ -66,7 +71,7 @@
   <script>
     // Dark/Light mode toggle
     const toggle = document.getElementById('theme-toggle');
-    toggle.addEventListener('click', () => {
+    toggle.addEventListener('change', () => {
       document.body.classList.toggle('dark-mode');
     });
 
