--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
   <!-- Footer -->
   <footer>
-    <p>© 2025 Ritmic</p>
+    <p>2025 - Ritmic</p>
   </footer>
 
   <!-- Smooth Scroll Script -->
