--- a/index.html
+++ b/index.html
@@ -54,6 +54,12 @@
         <p>My personal website built with HTML and CSS (this site!).</p>
         <a href="https://github.com/RitmicOfficial/website" target="_blank" class="btn">View on GitHub</a>
       </div>
+
+        <div class="card">
+        <h3>To Do List App</h3>
+        <p>Simple To-Do List app for learning and daily tasks</p>
+        <a href="https://github.com/RitmicOfficial/to-do-list-app" target="_blank" class="btn">View on GitHub</a>
+      </div>
     </div>
   </section>
 
