--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <h2>About Me</h2>
     <p>
       I'm currently learning programming.  
-      This website is one of my first steps into the world of software development 🚀.
+      This website is one of my first steps into the world of software development.
     </p>
   </section>
 
