--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Ritmic | Personal Website</title>
   <link rel="stylesheet" href="styles.css" />
      <!-- Favicon -->
-  <link rel="icon" type="image/png" href="ritmic.ico">
+  <link rel="icon" type="image/png" href="ritmic.icoo">
 </head>
 <body>
   <!-- Navbar -->
